@@ -1,5 +1,5 @@
 /*
- * Copyright 2018 the original author or authors.
+ * Copyright 2018-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -66,6 +66,10 @@ class FailedRecordTracker {
 
 	void clearThreadState() {
 		this.failures.remove();
+	}
+
+	BiConsumer<ConsumerRecord<?, ?>, Exception> getRecoverer() {
+		return this.recoverer;
 	}
 
 	private static final class FailedRecord {
