@@ -17,6 +17,7 @@
 package org.springframework.kafka.listener;
 
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.BiConsumer;
@@ -29,10 +30,15 @@ import org.apache.kafka.clients.consumer.OffsetAndMetadata;
 import org.apache.kafka.clients.consumer.OffsetCommitCallback;
 import org.apache.kafka.common.TopicPartition;
 
+import org.springframework.classify.BinaryExceptionClassifier;
 import org.springframework.kafka.KafkaException;
 import org.springframework.kafka.listener.ContainerProperties.AckMode;
 import org.springframework.kafka.support.SeekUtils;
+import org.springframework.kafka.support.serializer.DeserializationException;
 import org.springframework.lang.Nullable;
+import org.springframework.messaging.converter.MessageConversionException;
+import org.springframework.messaging.handler.invocation.MethodArgumentResolutionException;
+import org.springframework.util.Assert;
 
 /**
  * An error handler that seeks to the current offset for each topic in the remaining
@@ -52,6 +58,8 @@ public class SeekToCurrentErrorHandler implements ContainerAwareErrorHandler {
 	private final FailedRecordTracker failureTracker;
 
 	private boolean commitRecovered;
+
+	private BinaryExceptionClassifier classifier;
 
 	/**
 	 * Construct an instance with the default recoverer which simply logs the record after
@@ -93,6 +101,7 @@ public class SeekToCurrentErrorHandler implements ContainerAwareErrorHandler {
 	 */
 	public SeekToCurrentErrorHandler(@Nullable BiConsumer<ConsumerRecord<?, ?>, Exception> recoverer, int maxFailures) {
 		this.failureTracker = new FailedRecordTracker(recoverer, maxFailures, LOGGER);
+		this.classifier = configureDefaultClassifier();
 	}
 
 	/**
@@ -116,14 +125,97 @@ public class SeekToCurrentErrorHandler implements ContainerAwareErrorHandler {
 		this.commitRecovered = commitRecovered;
 	}
 
+	/**
+	 * Return the exception classifier.
+	 * @return the classifier.
+	 * @since 2.3
+	 */
+	protected BinaryExceptionClassifier getClassifier() {
+		return this.classifier;
+	}
+
+	/**
+	 * Set an exception classifier to determine whether the exception should cause a retry
+	 * (until exhaustion) or not. If not, we go straight to the recoverer. By default,
+	 * the following exceptions will not be retried:
+	 * <ul>
+	 * <li>{@link DeserializationException}</li>
+	 * <li>{@link MessageConversionException}</li>
+	 * <li>{@link MethodArgumentResolutionException}</li>
+	 * <li>{@link NoSuchMethodException}</li>
+	 * <li>{@link ClassCastException}</li>
+	 * </ul>
+	 * All others will be retried.
+	 * The classifier's {@link BinaryExceptionClassifier#setTraverseCauses(boolean) traverseCauses}
+	 * will be set to true because the container always wraps exceptions in a
+	 * {@link ListenerExecutionFailedException}.
+	 * This replaces the default classifier.
+	 * @param classifier the classifier.
+	 * @since 2.3
+	 */
+	public void setClassifier(BinaryExceptionClassifier classifier) {
+		Assert.notNull(classifier, "'classifier' + cannot be null");
+		classifier.setTraverseCauses(true);
+		this.classifier = classifier;
+	}
+
+	/**
+	 * Add an exception type to the default list; if and only if an external classifier
+	 * has not been provided. By default, the following exceptions will not be retried:
+	 * <ul>
+	 * <li>{@link DeserializationException}</li>
+	 * <li>{@link MessageConversionException}</li>
+	 * <li>{@link MethodArgumentResolutionException}</li>
+	 * <li>{@link NoSuchMethodException}</li>
+	 * <li>{@link ClassCastException}</li>
+	 * </ul>
+	 * All others will be retried.
+	 * @param exceptionType the exception type.
+	 * @since 2.3
+	 * @see #removeNotRetryableException(Class)
+	 * @see #setClassifier(BinaryExceptionClassifier)
+	 */
+	public void addNotRetryableException(Class<? extends Exception> exceptionType) {
+		Assert.isTrue(this.classifier instanceof ExtendedBinaryExceptionClassifier,
+				"Cannot add exception types to a supplied classifier");
+		((ExtendedBinaryExceptionClassifier) this.classifier).getClassified().put(exceptionType, false);
+	}
+
+	/**
+	 * Remove an exception type from the configured list; if and only if an external
+	 * classifier has not been provided. By default, the following exceptions will not be
+	 * retried:
+	 * <ul>
+	 * <li>{@link DeserializationException}</li>
+	 * <li>{@link MessageConversionException}</li>
+	 * <li>{@link MethodArgumentResolutionException}</li>
+	 * <li>{@link NoSuchMethodException}</li>
+	 * <li>{@link ClassCastException}</li>
+	 * </ul>
+	 * All others will be retried.
+	 * @param exceptionType the exception type.
+	 * @return true if the removal was successful.
+	 * @since 2.3
+	 * @see #addNotRetryableException(Class)
+	 * @see #setClassifier(BinaryExceptionClassifier)
+	 */
+	public boolean removeNotRetryableException(Class<? extends Exception> exceptionType) {
+		Assert.isTrue(this.classifier instanceof ExtendedBinaryExceptionClassifier,
+				"Cannot remove exception types from a supplied classifier");
+		return ((ExtendedBinaryExceptionClassifier) this.classifier).getClassified().remove(exceptionType);
+	}
+
 	@Override
 	public void handle(Exception thrownException, List<ConsumerRecord<?, ?>> records,
 			Consumer<?, ?> consumer, MessageListenerContainer container) {
 
-		if (!SeekUtils.doSeeks(records, consumer, thrownException, true, this.failureTracker::skip, LOGGER)) {
+		if (!this.classifier.classify(thrownException)) {
+			this.failureTracker.getRecoverer().accept(records.get(0), thrownException);
+		}
+		else if (!SeekUtils.doSeeks(records, consumer, thrownException, true, this.failureTracker::skip, LOGGER)) {
 			throw new KafkaException("Seek to current after exception", thrownException);
 		}
-		else if (this.commitRecovered) {
+		if (this.commitRecovered) {
 			if (container.getContainerProperties().getAckMode().equals(AckMode.MANUAL_IMMEDIATE)) {
 				ConsumerRecord<?, ?> record = records.get(0);
 				Map<TopicPartition, OffsetAndMetadata> offsetToCommit = Collections.singletonMap(
@@ -149,6 +241,38 @@ public class SeekToCurrentErrorHandler implements ContainerAwareErrorHandler {
 	@Override
 	public void clearThreadState() {
 		this.failureTracker.clearThreadState();
+	}
+
+	private static BinaryExceptionClassifier configureDefaultClassifier() {
+		Map<Class<? extends Throwable>, Boolean> classified = new HashMap<>();
+		classified.put(DeserializationException.class, false);
+		classified.put(MessageConversionException.class, false);
+		classified.put(MethodArgumentResolutionException.class, false);
+		classified.put(NoSuchMethodException.class, false);
+		classified.put(ClassCastException.class, false);
+		ExtendedBinaryExceptionClassifier exceptionClassifier = new ExtendedBinaryExceptionClassifier(classified, true);
+		return exceptionClassifier;
+	}
+
+	/**
+	 * Extended to provide visibility to the current classified exceptions.
+	 * @author Gary Russell
+	 * @since 2.3
+	 *
+	 */
+	@SuppressWarnings("serial")
+	private static class ExtendedBinaryExceptionClassifier extends BinaryExceptionClassifier {
+
+
+		ExtendedBinaryExceptionClassifier(Map<Class<? extends Throwable>, Boolean> typeMap, boolean defaultValue) {
+			super(typeMap, defaultValue);
+		}
+
+		@Override
+		protected Map<Class<? extends Throwable>, Boolean> getClassified() { // NOSONAR worthless override
+			return super.getClassified();
+		}
+
 	}
 
 }
