@@ -16,6 +16,11 @@ Now a `ListenerExecutionFailedException` is always the argument (with the actual
 Because the listener container has it's own mechanism for committing offsets, it prefers the Kafka `ConsumerConfig.ENABLE_AUTO_COMMIT_CONFIG` to be `false`.
 It now sets it to false automatically unless specifically set in the consumer factory or the container's consumer property overrides.
 
+==== ErrorHandler Changes
+
+The `SeekToCurrentErrorHandler` now treats certain exceptions as fatal and disables retry for those, invoking the recoverer on first failure.
+See <<seek-to-current>> for more information.
+
 ==== TopicBuilder
 
 A new class `TopicBuilder` is provided for more convenient creation of `NewTopic` `@Bean` s for automatic topic provisioning.
